--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -2,5 +2,5 @@ add_subdirectory( nodeos )
 add_subdirectory( cleos )
 add_subdirectory( keosd )
 add_subdirectory( eosio-launcher )
-add_subdirectory( genesis )
+#add_subdirectory( genesis )
 add_subdirectory( eosio-blocklog )
